# SmartCalc

./: Makefile  README.md  credit.c  deposit.c  manual.texi  s21_calculator.c  s21_common.c  s21_parser.c  s21_smart_calc.h
manual/: index.html
smart_calc/: CMakeLists.txt  Makefile  creditwindow.cpp  creditwindow.h  creditwindow.ui  depositwindow.cpp  depositwindow.h  depositwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  plot.cpp  plot.h  plot.ui
unit_test/: s21_smart_calc_test.c  s21_smart_calc_test.h
